--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
                   <div class="logo-border">
                     <img src="img/my logo.png" alt="Logo" class="logo">
                   </div>
-                  <span class="page-title">Lyys's Page</span>
+                  <span class="page-title">Lyys'sPage</span>
                 </div>
               </header>
         </div>
         <nav>
             <ul>
-                <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About me</a></li>
                 <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
@@ -64,7 +63,7 @@
             <!-- Left Content -->
             <div class="about-left">
                 <div class="about-box">
-                    <h2 class="about-title">A PEEK OF ME  ≽^• ˕ • ྀི≼</h2>
+                    <h2 class="about-title">Who I Am</h2>
                     <p class="about-description">
                       Hi! I'm a dedicated mass communication student 
                       with a creative enthusiast with passion for photography and videography. 
@@ -77,7 +76,7 @@
                 </div>
                 <!-- Buttons -->
                 <div class="about-buttons">
-                  <a href="my resume.pdf" target="_blank" class="button">View Resume</a>
+                  <a href="INTERNSHIP RESUME.pdf" target="_blank" class="button">View Resume</a>
                   <a href="https://www.linkedin.com/in/lysya-sufia-63863a349/" target="_blank" class="button">LinkedIn</a>
               </div>
                 <div class="right-column">
@@ -246,7 +245,7 @@
       <a href="photovideo.html" class="project-card">
         <img src="img/me6.jpg" alt="Videography and Editing">
         <div class="project-overlay">
-          <h3>PHOTOGRAPHY VIDEOGRAPHY & EDITING</h3>
+          <h3>PHOTOGRAPHY VIDEOGRAPHY EDITING & EVENT MANAGEMENT</h3>
         </div>
       </a>
       <a href="content-creation.html" class="project-card">
@@ -269,7 +268,7 @@
      <section id="contact">
     <section class="contact-page">
             <h2 class="section-title"></h2>
-            <h1 class="title"> ︶꒦꒷♡꒷꒦︶ Get In <span>Touch ︶꒦꒷♡꒷꒦︶</span>
+            <h1 class="title">Get In Touch</span>
             </h1>
             <div class="buttons-container">
               <div class="button-group">
@@ -277,7 +276,7 @@
                   <img src="img/email.png" alt="Email Icon" class="button-icon">
                   Email
                 </button>
-                <p class="info-detail">nurulalysya@gmail.com</p>
+                <p class="info-detail">nurulalysya<br>@gmail.com</p>
               </div>
               <div class="button-group">
                 <button class="info-btn">
@@ -285,7 +284,7 @@
                   Address
                 </button>
                 <p class="info-detail">
-                  Taman Mekasar 17000 <br> Pasir Mas, Kelantan
+                  Kuantan <br> Pahang
                 </p>
               </div>
               <div class="button-group">
